Редактирование README.md, swagger для списка книг
