# app/modules/Api/Controllers/BookController.php
@@ -10,6 +10,60 @@ use OpenApi\Attributes as OA;
     schema: "Book",
     title: "Book",
     description: "Book model",
+    properties: [
+        new OA\Property(
+            property: "id",
+            description: "ID",
+            type: "integer",
+            example: 1
+        ),
+        new OA\Property(
+            property: "title",
+            description: "Название книги",
+            type: "string",
+            example: "Vel assumenda eum"
+        ),
+        new OA\Property(
+            property: "year",
+            description: "Год издания",
+            type: "integer",
+            example: 2014
+        ),
+        new OA\Property(
+            property: "description",
+            description: "Описание книги",
+            type: "string",
+            example: null,
+            nullable: true
+        ),
+        new OA\Property(
+            property: "isbn",
+            description: "ISBN",
+            type: "string",
+            example: "9783264097399"
+        ),
+        new OA\Property(
+            property: "photo_path",
+            description: "Путь к обложке книги",
+            type: "string",
+            example: "/img/book_image.jpg"
+        ),
+        new OA\Property(
+            property: "date_created",
+            description: "Дата создания записи",
+            type: "string",
+            format: "datetime",
+            example: "2022-10-23 07:51:37"
+        ),
+        new OA\Property(
+            property: "date_updated",
+            description: "Дата обновления записи",
+            type: "string",
+            format: "datetime",
+            example: null,
+            nullable: true
+        )
+    ],
     type: "object"
 )]
 class BookController extends ApiController
@@ -18,12 +72,12 @@ class BookController extends ApiController
 
     #[OA\Get(
         path: "/book",
-        summary: "Get list of books",
-        tags: ["Users"]
+        summary: "Список книг",
+        tags: ["Books"]
     )]
     #[OA\Response(
         response: 200,
-        description: "Successful response",
+        description: "Успешный ответ",
         content: new OA\JsonContent(
             type: "array",
             items: new OA\Items(ref: "#/components/schemas/Book")
